--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Users/bolo/Downloads/ojdbc8.jar">
+	<classpathentry kind="lib" path="C:/Users/pipsi/Documents/PDL/Installation prgm/ojdbc8.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
